@@ -1,5 +1,11 @@
 2007-06-06  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-themes.c: (theme_thumbnail_generate),
+	(theme_queue_for_thumbnail), (theme_thumbnail_done_cb): update
+	for changes in thumbnailer API
+
+2007-06-06  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (style_response_cb), (style_init): don't
 	destroy the window on "delete-event"
 
